CI/yamls/api-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-deployment
  namespace: tech-shop
spec:
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service
        image: maor700/api-service:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: api-service-service
  namespace: tech-shop
spec:
  type: LoadBalancer
  selector:
    app: api-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
