CI/yamls/db-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-service-deployment
  namespace: tech-shop
spec:
  selector:
    matchLabels:
      app: db-service
  template:
    metadata:
      labels:
        app: db-service
    spec:
      containers:
      - name: db-service
        image: maor700/db-service:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4202

---
apiVersion: v1
kind: Service
metadata:
  name: db-service-service
  namespace: tech-shop
spec:
  type: LoadBalancer
  selector:
    app: db-service
  ports:
    - protocol: TCP
      port: 4202
      targetPort: 4202
