CI/yamls/ingress-component.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-shop-ingress
  namespace: tech-shop
  annotations:
    kubernetes.io/ingress.class: "nginx" # Adjust this if you're using a different Ingress Controller
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: tech-shop-service
              port:
                number: 3000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: api-service-service
              port:
                number: 8080
        - path: /db
          pathType: Prefix
          backend:
            service:
              name: db-service-service
              port:
                number: 4202
